CRUD de Insumos e testes de integração