@@ -4,6 +4,7 @@ import java.io.IOException;
 import java.io.InputStream;
 import java.nio.file.Files;
 import java.nio.file.Path;
+import java.nio.file.Paths;
 
 import org.springframework.util.FileCopyUtils;
 
@@ -14,7 +15,7 @@ public class LocalFileStorageService implements FileStorageService {
 	@Override
 	public InputStream recuperar(String nomeArquivo) {
 		try {
-			Path path = Path.of("C:/Users/mayco/Desktop/files", nomeArquivo);
+			Path path = Paths.get("C:/Users/mayco/Desktop/files", nomeArquivo);
 			return Files.newInputStream(path);
 		} catch (IOException e) {
 			throw new StorageException("Não foi possivel recuperar o arquivo", e);
@@ -24,7 +25,7 @@ public class LocalFileStorageService implements FileStorageService {
 	@Override
 	public void armazenar(File file) {
 		try {
-			Path arquivoPath = Path.of("C:/Users/mayco/Desktop/files", file.getNomeArquivo());
+			Path arquivoPath = Paths.get("C:/Users/mayco/Desktop/files", file.getNomeArquivo());
 			FileCopyUtils.copy(file.getInputStream(), Files.newOutputStream(arquivoPath));
 		} catch (IOException e) {
 			throw new StorageException("Não foi possivel armazenar o arquivo", e);
@@ -34,7 +35,7 @@ public class LocalFileStorageService implements FileStorageService {
 	@Override
 	public void remover(String nomeArquivo) {
 		try {
-			Path path = Path.of("C:/Users/mayco/Desktop/files", nomeArquivo);
+			Path path = Paths.get("C:/Users/mayco/Desktop/files", nomeArquivo);
 			Files.deleteIfExists(path);
 		} catch (IOException e) {
 			throw new StorageException("Não foi possivel excluir o arquivo", e);
